--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
 /* banner section styles */
 
 .banner-img{
+    height: 635px;
+    width: 800px;
     padding-right: 50px;
     padding-top: 50px;
 }
@@ -15,19 +17,19 @@
     justify-content: space-between;
 }
 .banner-text{
-    padding-left: 240px;
-    padding-top: 200px;
+    padding-left: 200px;
+    padding-top: 160px;
 }
 .banner-title{
 
     color: black;
     font-size: 50px;
     font-weight: 900;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 .banner-description{
     color: rgb(106, 106, 106);
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     font-size: 15px;
 }
 .btn{
