--- a/style.css
+++ b/style.css
@@ -117,8 +117,18 @@
 }
 .deal-desc{
     color: rgb(106, 106, 106);
-    font-size: 18px;
+    font-size: 15px;
     margin-bottom: 25px;
 }
+.insta-text{
+    text-align: center;
+    margin-top: 120px;
+}
+.insta-desc{
+    color: rgb(106, 106, 106);
+    font-size: 15px;
+    margin-bottom: 40px;
+}
+
 
 
