--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@
     font-size: 15px;
     margin-bottom: 25px;
 }
+
+/* instagram section styles */
 .insta-text{
     text-align: center;
     margin-top: 120px;
@@ -128,6 +130,16 @@
     color: rgb(106, 106, 106);
     font-size: 15px;
     margin-bottom: 40px;
+}
+.insta-img{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 120px;
+}
+.instagram-img{
+    width: 250px;
+    height: 300px;
 }
 
 
