--- a/style.css
+++ b/style.css
@@ -1,37 +1,43 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
     font-family: Lato;
 }
+
 /* banner section styles */
 
-.banner-img{
+.banner-img {
     padding-right: 50px;
     padding-top: 50px;
 }
-.banner{
+
+.banner {
     background-color: #ffc2d1;
     display: flex;
     justify-content: space-between;
     height: 850px;
 }
-.banner-text{
+
+.banner-text {
     padding-left: 200px;
     padding-top: 200px;
 }
-.banner-title{
+
+.banner-title {
 
     color: black;
     font-size: 50px;
     font-weight: 900;
     margin-bottom: 20px;
 }
-.banner-description{
+
+.banner-description {
     color: rgb(106, 106, 106);
     margin-bottom: 25px;
     font-size: 15px;
 }
-.btn{
+
+.btn {
     padding: 15px 38px;
     color: aliceblue;
     background-color: #fb6f92;
@@ -41,29 +47,32 @@
 
 /* featured section style */
 
-.featured-text{
+.featured-text {
     text-align: center;
     margin-top: 150px;
 }
-.title-primary{
+
+.title-primary {
     color: black;
     font-size: 35px;
     font-weight: 900;
     margin-bottom: 18px;
 }
-.featured-desc{
+
+.featured-desc {
     color: rgb(106, 106, 106);
     font-size: 15px;
 }
 
 /* featured image styles */
-.featured-flower-img{
+.featured-flower-img {
     display: flex;
     justify-content: space-around;
     margin: 40px 200px 120px 200px;
     text-align: center;
 }
-.pink{
+
+.pink {
     background-color: #ffb3c6;
     height: 380px;
     width: 220px;
@@ -71,13 +80,15 @@
     border-radius: 300px 300px 0px 0px;
     margin-bottom: 20px;
 }
-.flower-desc{
+
+.flower-desc {
     color: rgb(36, 36, 36);
     font-size: 16px;
     font-weight: 700;
     text-decoration: underline;
 }
-.red{
+
+.red {
     height: 70px;
     width: 70px;
     background-color: #90e0ef;
@@ -87,7 +98,8 @@
     border-radius: 300px 300px 0px 0px;
     margin-bottom: 20px;
 }
-.yellow{
+
+.yellow {
     background-color: #76c893;
     height: 380px;
     width: 220px;
@@ -95,43 +107,65 @@
     border-radius: 300px 300px 0px 0px;
     margin-bottom: 20px;
 }
+
+/* info section styles */
+
+.info {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(228, 240, 250);
+    margin-left: 210px;
+    margin-right: 210px;
+    margin-bottom: 120px;
+    padding: 50px 50px 50px 50px;
+    gap: 100px;
+}
+.delivery{
+    text-align: center;
+}
+
 /* hot deal section style */
-.hot-deal{
+.hot-deal {
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #ffebf0;
     text-align: center;
 }
-.hot-deal-img{
+
+.hot-deal-img {
     margin-right: 200px;
     margin-top: 100px;
     margin-bottom: 100px;
 }
 
-.hot-deal-text{
+.hot-deal-text {
     padding-left: 200px;
 }
-.off{
+
+.off {
     color: rgb(254, 89, 117);
 }
-.deal-desc{
+
+.deal-desc {
     color: rgb(106, 106, 106);
     font-size: 15px;
     margin-bottom: 25px;
 }
 
 /* instagram section styles */
-.insta-text{
+.insta-text {
     text-align: center;
     margin-top: 120px;
 }
-.insta-desc{
+
+.insta-desc {
     color: rgb(106, 106, 106);
     font-size: 15px;
     margin-bottom: 40px;
 }
-.insta-img{
+
+.insta-img {
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -142,7 +176,7 @@
 
 /* hot deals section styles */
 
-.latest-deal{
+.latest-deal {
     text-align: center;
     padding-top: 120px;
     background-image: url('image/Rectangle\ 9.png');
@@ -150,12 +184,14 @@
     background-position: center;
     margin-bottom: 120px;
 }
-.hot-deal-desc{
+
+.hot-deal-desc {
     color: rgb(106, 106, 106);
     font-size: 15px;
     padding-bottom: 40px;
 }
-.email{
+
+.email {
     padding: 15px 500px 15px 15px;
     margin-bottom: 140px;
     margin-right: 15px;
@@ -163,26 +199,28 @@
     border-radius: 8px;
 }
 
-.footer-container{
+/* footer section styles */
+.footer-container {
     background-color: black;
 }
-.foot{
+
+.foot {
     color: white;
     padding-top: 120px;
 }
-.footer-text{
+
+.footer-text {
     text-align: center;
 }
-.footer-desc{
+
+.footer-desc {
     color: rgb(201, 200, 200);
     font-size: 15px;
     padding-bottom: 40px;
 }
-.footer-end{
+
+.footer-end {
     color: rgb(178, 178, 178);
     text-align: center;
     padding-bottom: 120px;
 }
-
-
-
